<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share"
        android:enabled="true"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_favorite"
        android:enabled="true"
        android:title="@string/favorite"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/menu_add_selection"
        android:enabled="true"
        android:title="@string/add_to_selection"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_delete"
        android:enabled="true"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>