<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_selection"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/textColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorInactive" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_dialog"
            android:text="Close"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/create"
            android:textColor="@color/textColor" />

    </LinearLayout>

</LinearLayout>