<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_popup">

    <LinearLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/profilePic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            app:placeholderImage="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/the_best_music"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/textColor"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="John Doe, his brothers, his sisters, his pets and his more than amazing band"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topView"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/separator">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/viewAddSelection"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/baseline_keyboard_arrow_up_white_36"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/back"
                android:textColor="@color/textColor" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/topView"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:text="@string/select"
                android:textColor="@color/textColor"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAddSelection"
                android:layout_width="wrap_content"
                android:text="@string/new_selection"
                android:textColor="@color/textColor"
                android:paddingLeft="10dp"
                android:drawableTint="@color/textColor"
                android:drawableLeft="@drawable/baseline_add_white_18"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/menuList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</RelativeLayout>